--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "per-env": "^1.0.2",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "dotenv-cli": "^7.1.0",
